Add nodejs function support