@@ -19,20 +19,17 @@
                 <configuration>
                     <images>
                         <image>
-                            <name>nipun/klusterfuck-agent:${image.version}</name>
+                            <name>klusterfuck/agent-nodejs:${image.version}</name>
                             <build>
-                                <from>nipun/alpine-jre8-python-node:1.0</from>
+                                <from>fusioncomau/alpine-node-git:7.5.0</from>
                                 <cleanup>remove</cleanup>
                                 <assembly>
                                     <basedir>/app</basedir>
                                     <inline>
                                         <fileSets>
                                             <fileSet>
-                                                <directory>target</directory>
+                                                <directory>src/main/resources</directory>
                                                 <outputDirectory>/</outputDirectory>
-                                                <includes>
-                                                    <include>klusterfuck-agent-${project.version}.jar</include>
-                                                </includes>
                                             </fileSet>
                                         </fileSets>
                                     </inline>
@@ -41,7 +38,7 @@
                                     <port>5000</port>
                                 </ports>
                                 <entryPoint>
-                                    <shell>java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=2 -XshowSettings:vm -XX:+UseParNewGC -XX:+UseConcMarkSweepGC -jar /app/klusterfuck-agent-${project.version}.jar</shell>
+                                    <shell>cd /app &amp;&amp; git clone $GIT_URL repo &amp;&amp; cd repo &amp;&amp; git checkout $GIT_COMMIT &amp;&amp; cd .. &amp;&amp; node index.js </shell>
                                 </entryPoint>
                             </build>
                         </image>
